@@ -8,6 +8,7 @@
  - Fix for bug 27868: Added null guard
  - Fix for bug 27872: Introduced possibility to output unparsable images to disk for debugging purpose
  - Fix for bug 27477: Refactored IMAP exception class to let its error message reside in a dedicated translatable class file
+ - Fix for bug 27892: Introduced capability for global address book "gab"
 
 * 2013-07-30 - tobias.friedrich@open-xchange.com
 
